BillingHub/force-app/main/default/objects/Refund_Request__c/Refund_Request__c.object-meta.xml
<CustomObject>
    <label>Refund Request</label>
    <pluralLabel>Refund Requests</pluralLabel>
    <nameField>
        <label>Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>RR-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>