BillingHub/force-app/main/default/objects/Refund_Request__c/fields/Decision_Notes__c.field-meta.xml
<CustomField>
    <fullName>Decision_Notes__c</fullName>
    <label>Decision Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>