BillingHub/force-app/main/default/objects/Refund_Request__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Lookup</type>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Refund Requests</relationshipLabel>
    <relationshipName>Refund_Requests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>